--- a/AssetManagementSystem.PL/appsettings.json
+++ b/AssetManagementSystem.PL/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=moamen\\SQLEXPRESS01;Initial Catalog=AssetManagementDB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True;Connect Timeout=15;Pooling=True;Max Pool Size=100;"
+    "DefaultConnection": "Data Source=moamen\\SQLEXPRESS01;Initial Catalog=AssetManagementDB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True;Connect Timeout=30;Pooling=True;Max Pool Size=200;Application Intent=ReadWrite"
   },
   "Logging": {
     "LogLevel": {
