--- a/AssetManagementSystem.BLL/AssetManagementSystem.BLL.csproj
+++ b/AssetManagementSystem.BLL/AssetManagementSystem.BLL.csproj
@@ -21,6 +21,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
+    <PackageReference Include="QuestPDF" Version="2025.1.3" />
   </ItemGroup>
 
   <ItemGroup>
