--- a/.aws/assetmanagement.service
+++ b/.aws/assetmanagement.service
@@ -1,47 +1,41 @@
 [Unit]
-Description=Asset Management System - .NET Web Application
+Description=Asset Management System - ASP.NET Core Application
 After=network.target
 StartLimitIntervalSec=0
 
 [Service]
 Type=notify
-# Run as ec2-user for security
 User=ec2-user
 Group=ec2-user
-
-# Application settings
 WorkingDirectory=/var/www/assetmanagement/current
-ExecStart=/usr/bin/dotnet AssetManagementSystem.PL.dll
+ExecStart=/usr/local/bin/dotnet AssetManagementSystem.PL.dll
+ExecReload=/bin/kill -HUP $MAINPID
 Restart=always
-RestartSec=1
-
-# Environment variables
+RestartSec=5
+TimeoutStopSec=90
+SyslogIdentifier=assetmanagement
 Environment=ASPNETCORE_ENVIRONMENT=Production
-Environment=ASPNETCORE_URLS=http://localhost:5000
+Environment=DOTNET_ROOT=/home/ec2-user/.dotnet
+Environment=PATH=/home/ec2-user/.dotnet:/usr/local/bin:/usr/bin:/bin
+Environment=ASPNETCORE_URLS=http://0.0.0.0:5000
 Environment=DOTNET_PRINT_TELEMETRY_MESSAGE=false
 Environment=DOTNET_CLI_TELEMETRY_OPTOUT=1
-
-# Resource limits
-MemoryMax=1G
-TasksMax=100
 
 # Security settings
 NoNewPrivileges=true
 PrivateTmp=true
 ProtectSystem=strict
-ProtectHome=true
-ReadWritePaths=/var/www/assetmanagement/current/wwwroot/files
-ReadWritePaths=/var/www/assetmanagement/current/Logs
+ReadWritePaths=/var/www/assetmanagement
+ReadWritePaths=/tmp
+ReadWritePaths=/var/log
+
+# Resource limits
+LimitNOFILE=65536
+LimitNPROC=4096
 
 # Logging
 StandardOutput=journal
 StandardError=journal
-SyslogIdentifier=assetmanagement
-
-# Process management
-KillMode=mixed
-TimeoutStartSec=30
-TimeoutStopSec=30
 
 [Install]
 WantedBy=multi-user.target
