--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,15 +98,13 @@ jobs:
           # Create deployment archive
         zip -r ../deployment.zip .
         cd ..
-        echo "Deployment package created: $(ls -lh deployment.zip)"
-
-    - name: Check and install .NET 9 runtime
+        echo "Deployment package created: $(ls -lh deployment.zip)"    - name: Check and install .NET 9 runtime
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.AWS_EC2_HOST }}
         username: ${{ secrets.AWS_EC2_USER }}
         key: ${{ secrets.AWS_EC2_KEY }}
-        timeout: 600
+        timeout: 600s
         script: |
           echo "Checking .NET installation..."
           
@@ -158,15 +156,13 @@ jobs:
               echo "❌ Failed to install .NET 9 runtime"
               exit 1
             fi
-          fi
-
-    - name: Setup nginx
+          fi    - name: Setup nginx
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.AWS_EC2_HOST }}
         username: ${{ secrets.AWS_EC2_USER }}
         key: ${{ secrets.AWS_EC2_KEY }}
-        timeout: 300
+        timeout: 300s
         script: |
           echo "Setting up nginx..."
           
@@ -396,9 +392,7 @@ jobs:
             echo "Running database migrations..."
             dotnet ef database update || echo "No migrations to run or EF tools not available"          else
             echo "EF Core tools not available, skipping migrations"
-          fi
-
-    - name: Install .NET and Start application
+          fi    - name: Install .NET and Start application
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.AWS_EC2_HOST }}
