--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,13 +92,15 @@ jobs:
             "Account": "momenhassan7240@gmail.com",
             "Password": "${{ secrets.EMAIL_PASSWORD }}",
             "Security": true
-          }
-        }
+          }        }
         EOF
-          # Create deployment archive
+        
+        # Create deployment archive
         zip -r ../deployment.zip .
         cd ..
-        echo "Deployment package created: $(ls -lh deployment.zip)"    - name: Check and install .NET 9 runtime
+        echo "Deployment package created: $(ls -lh deployment.zip)"
+
+    - name: Check and install .NET 9 runtime
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.AWS_EC2_HOST }}
@@ -147,8 +149,7 @@ jobs:
             # Create system-wide dotnet symlink
             sudo ln -sf $HOME/.dotnet/dotnet /usr/local/bin/dotnet
             
-            # Verify installation
-            if check_dotnet; then
+            # Verify installation            if check_dotnet; then
               echo "✅ .NET 9 runtime installed successfully"
               dotnet --version
               dotnet --list-runtimes
@@ -156,7 +157,9 @@ jobs:
               echo "❌ Failed to install .NET 9 runtime"
               exit 1
             fi
-          fi    - name: Setup nginx
+          fi
+
+    - name: Setup nginx
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.AWS_EC2_HOST }}
@@ -382,17 +385,19 @@ jobs:
         key: ${{ secrets.AWS_EC2_KEY }}
         script: |
           cd /var/www/assetmanagement/current
-          
-          # Set environment variables
+            # Set environment variables
           export ASPNETCORE_ENVIRONMENT=Production
           
           # Try to run migrations if the command exists
           echo "Checking for database migrations..."
           if dotnet ef --help > /dev/null 2>&1; then
             echo "Running database migrations..."
-            dotnet ef database update || echo "No migrations to run or EF tools not available"          else
+            dotnet ef database update || echo "No migrations to run or EF tools not available"
+          else
             echo "EF Core tools not available, skipping migrations"
-          fi    - name: Install .NET and Start application
+          fi
+
+    - name: Install .NET and Start application
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.AWS_EC2_HOST }}
@@ -473,15 +478,15 @@ jobs:
             echo "✅ Application started successfully"
             sudo systemctl status assetmanagement --no-pager -l
           else
-            echo "❌ Failed to start application"
-            echo "Service status:"
+            echo "❌ Failed to start application"            echo "Service status:"
             sudo systemctl status assetmanagement --no-pager -l
             echo "Recent logs:"
             sudo journalctl -u assetmanagement --no-pager -l -n 30
             echo "Checking dotnet availability:"
             which dotnet || echo "dotnet not found in PATH"
             dotnet --version || echo "dotnet version check failed"
-            echo "Checking application files:"            ls -la /var/www/assetmanagement/current/
+            echo "Checking application files:"
+            ls -la /var/www/assetmanagement/current/
             exit 1
           fi
 
