--- a/AssetManagementSystem.PL/appsettings.AppRunner.json
+++ b/AssetManagementSystem.PL/appsettings.AppRunner.json
@@ -6,11 +6,14 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore": "Warning"
+      "Microsoft.EntityFrameworkCore": "Information"
+    },
+    "Console": {
+      "IncludeScopes": true,
+      "TimestampFormat": "yyyy-MM-dd HH:mm:ss "
     }
   },
   "AllowedHosts": "*",
-  "ApplicationUrl": "http://localhost:5187",
   "Email": {
     "Server": "smtp.gmail.com",
     "Port": 587,
@@ -22,5 +25,9 @@
   },
   "HealthChecks": {
     "Enabled": true
+  },
+  "Features": {
+    "EnableDetailedErrors": false,
+    "EnableSensitiveDataLogging": false
   }
 }
