Fix Cloud Run port configuration and startup issues
- Configure port in WebHost.UseUrls() before building app
- Fix email configuration null reference issues
- Remove hardcoded ASPNETCORE_URLS from Dockerfile
- Update appsettings.CloudRun.json with proper Email port as string
- Ensure app properly listens on PORT environment variable from Cloud Run

--- a/AssetManagementSystem.PL/appsettings.CloudRun.json
+++ b/AssetManagementSystem.PL/appsettings.CloudRun.json
@@ -16,7 +16,7 @@
   "AllowedHosts": "*",
   "Email": {
     "Server": "smtp.gmail.com",
-    "Port": 587,
+    "Port": "587",
     "SenderName": "Asset Management System",
     "SenderEmail": "${EMAIL_SENDER}",
     "Account": "${EMAIL_ACCOUNT}",
@@ -29,12 +29,5 @@
   "Features": {
     "EnableDetailedErrors": false,
     "EnableSensitiveDataLogging": false
-  },
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "http://0.0.0.0:8080"
-      }
-    }
   }
 }
