update forget password

--- a/AssetManagementSystem.PL/appsettings.Development.json
+++ b/AssetManagementSystem.PL/appsettings.Development.json
@@ -1,14 +1,13 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=assetmanagement-db.c5ukygaowo6o.eu-north-1.rds.amazonaws.com,1433;Database=AssetManagementDB;User Id=admin;Password=asset1234;Encrypt=True;TrustServerCertificate=True;"
-  },
-  "Email": {
+  },  "Email": {
     "Server": "smtp.gmail.com",
     "Port": 587,
     "SenderName": "Asset Management System",
     "SenderEmail": "momenhassan7240@gmail.com",
     "Account": "momenhassan7240@gmail.com",
-    "Password": "edlp uhjb bkoz ejpc",
+    "Password": "qebv vfcq ovof brjx",
     "Security": true
   }
 }
