forget password resolve

--- a/AssetManagementSystem.PL/appsettings.CloudRun.json
+++ b/AssetManagementSystem.PL/appsettings.CloudRun.json
@@ -11,9 +11,9 @@
     "Console": {
       "IncludeScopes": true,
       "TimestampFormat": "yyyy-MM-dd HH:mm:ss "
-    }
-  },
+    }  },
   "AllowedHosts": "*",
+  "ApplicationUrl": "https://asset-management-system-580642313220.us-central1.run.app",
   "Email": {
     "Server": "smtp.gmail.com",
     "Port": "587",
