--- a/AssetManagementSystem.PL/appsettings.Production.json
+++ b/AssetManagementSystem.PL/appsettings.Production.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=${DB_SERVER};Database=${DB_NAME};User Id=${DB_USER};Password=${DB_PASSWORD};Encrypt=True;TrustServerCertificate=True;"
   },
-  "ApplicationUrl": "http://localhost:5187",
+  "ApplicationUrl": "https://asset-management-system-580642313220.us-central1.run.app",
   "AllowedHosts": "*",
   "Email": {
     "Server": "smtp.gmail.com",
