--- a/AssetManagementSystem.PL/appsettings.Development.json
+++ b/AssetManagementSystem.PL/appsettings.Development.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=assetmanagement-db.c5ukygaowo6o.eu-north-1.rds.amazonaws.com,1433;Database=AssetManagementDB;User Id=admin;Password=asset1234;Encrypt=True;TrustServerCertificate=True;"
-  },  "Email": {
+  },
+  "ApplicationUrl": "https://asset-management-system-580642313220.us-central1.run.app",
+  "Email": {
     "Server": "smtp.gmail.com",
     "Port": 587,
     "SenderName": "Asset Management System",
