--- a/AssetManagementSystem.PL/appsettings.json
+++ b/AssetManagementSystem.PL/appsettings.json
@@ -10,7 +10,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ApplicationUrl": "http://localhost:5187",
+  "ApplicationUrl": "https://asset-management-system-580642313220.us-central1.run.app",
   "Email": {
     "Server": "smtp.gmail.com",
     "Port": 587,
